--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,23 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "API backend pour l'application de suivi de lecture gamifiée",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "test": "jest",
+    "lint": "eslint . --ext .ts",
+    "seed": "ts-node src/seed/index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "keywords": [
+    "reading",
+    "gamification",
+    "tracker"
+  ],
+  "author": "Cécile Hirschauer",
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
@@ -22,13 +30,31 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.16.3",
-    "sequelize": "^6.37.7"
+    "reflect-metadata": "^0.2.1",
+    "sequelize": "^6.37.7",
+    "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.7",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.12.4",
+    "@types/supertest": "^6.0.2",
+    "@types/validator": "^13.11.9",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "eslint": "^8.57.0",
     "jest": "^30.0.4",
     "nodemon": "^3.1.10",
-    "supertest": "^7.1.3"
+    "supertest": "^7.1.3",
+    "ts-jest": "^30.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
