--- a/reading-tracker-api/package.json
+++ b/reading-tracker-api/package.json
@@ -1,39 +1,59 @@
 {
   "name": "reading-tracker-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend API pour l'application de suivi de lecture gamifiée",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "db:start": "docker-compose up -d",
+    "db:stop": "docker-compose down",
+    "db:reset": "docker-compose down -v && docker-compose up -d",
+    "db:studio": "npx prisma studio",
+    "db:migrate": "npx prisma migrate dev",
+    "db:deploy": "npx prisma migrate deploy",
+    "db:generate": "npx prisma generate",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:setup": "npm run db:start && sleep 10 && npm run db:migrate && npm run db:seed"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "keywords": [
+    "reading",
+    "tracker",
+    "gamification",
+    "books"
+  ],
+  "author": "Cécile Hirschauer",
+  "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^6.14.0",
-    "bcrypt": "^6.0.0",
+    "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
-    "helmet": "^8.1.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-rate-limit": "^6.11.2",
+    "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.14.0",
+    "prisma": "^5.22.0",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
+    "@types/express": "^4.17.23",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.3.0",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.0.5",
+    "@types/node": "^20.19.11",
+    "@types/supertest": "^2.0.16",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
-    "supertest": "^7.1.4",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
